# SimuHeat

./: CMakeLists.txt  README.md  heat_simulation.cpp  main.cpp  plot.gnu  test_simulation.cpp
